@@ -4,10 +4,11 @@ Hash: SHA256
 DIST database_cleaner-0.6.4.gem 29184 RMD160 5b2a1bf83e0a1610a247d8b1ccd94ac887eca2e8 SHA1 63ae0db58fa47dec8f236828e04e3bdb297ed5af SHA256 edb43c8fa02a278fc86e769efe864e67d956608431ab9ca8ba00c6efa25b8b30
 DIST database_cleaner-0.6.7.gem 29696 RMD160 03f6921e1ac05268640839a6c0f00994ecca1116 SHA1 7d7ac397c6315380dda3fae5353ab8d2bbfd868d SHA256 5704d3102bf65d950ead25031f4adb1050eae2196c2b57db7308c941a1e092d1
 DIST database_cleaner-0.7.1.gem 31232 RMD160 7775b12460686b500e322c3a5ada33447005b189 SHA1 447fd289ada0d160299f787ccaaddb76f3eb33a1 SHA256 a6e59f8eea5eaad306c5d32966ffcf5c53883b519cecce103cf25120756d1a64
+DIST database_cleaner-0.7.2.gem 31744 RMD160 105b2d64509ec7cef327e4a620ecc5aaf7e4db9b SHA1 4fab42d374e448bd7feeb0b7424b020336eb035b SHA256 6273e46b3102e6c735db9a1206f226a6d7d69ea6ce318d2d160e09e25ddbd628
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9Z2CoACgkQiIP6VqMIqNfUMQD9FM9W4PNMDyxS2PcAdUvvwlrC
-ahYUgN88NDsbQK2dcx4A/3EVRasm/W7MSiB42x0QhFSGR1ThVNOrmKAoAS73x8jk
-=3G62
+iF4EAREIAAYFAk+H+h8ACgkQiIP6VqMIqNcR2wD6A/1gojd4oaoT2Lvm8D194qWv
+uw6LeA9NKIW0CydKAvABAIQcVYES4MpBykYkItTY4LvvBJb5Aev6PBEtgZAKEkzL
+=noQ8
 -----END PGP SIGNATURE-----
