@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*database_cleaner-0.7.2 (13 Apr 2012)
+
+  13 Apr 2012; Hans de Graaff <graaff@gentoo.org>
+  +database_cleaner-0.7.2.ebuild:
+  Version bump.
+
 *database_cleaner-0.7.1 (09 Mar 2012)
 
   09 Mar 2012; Hans de Graaff <graaff@gentoo.org>
